crates/analyzer/tests/snapshots/errors__ctx_pure.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `ctx` cannot be passed into pure functions
  ┌─ compile_errors/ctx_pure.fe:3:12
  │
3 │ pub fn foo(ctx: Context) {}
  │            ^^^^^^^^^^^^ `ctx` can only be passed into contract functions


